--- a/src/Components/RecipeCard/RecipeCard.module.scss
+++ b/src/Components/RecipeCard/RecipeCard.module.scss
@@ -32,11 +32,13 @@
     .foodImg {
       transform: translateY(-20%);
       @include flex(row, center, center);
+      
 
       img {
         width: 80%;
         border-radius: 50%;
         transition: all 0.7s;
+        box-shadow: 1px 15px 22px -4px rgba(0, 0, 0, 0.58);
       }
     }
 
@@ -66,6 +68,10 @@
         border-radius: 20px;
         color: white;
         background-color: rgb(30, 175, 129);
+        transition: all 0.3s;
+        &:hover {
+          background-color: rgb(10, 109, 78);
+        }
       }
     }
   }
